--- a/_cases/2023/DIVD-2023-00007.md
+++ b/_cases/2023/DIVD-2023-00007.md
@@ -36,7 +36,7 @@ timeline:
 
 ## Summary
 
-On February 3rd, DIVD took notice of an ongoing global ransomware attack using VMware ESXi servers vulnerable to CVE-2021-21974. This vulnerability is caused by a heap overflow issue in the OpenSLP service that can be exploited by an unauthenticated threat actor. The attack primarily seems to be taking place through the OpenSLP port, which is TCP or UDP port 427. 
+On February 3rd, DIVD became aware of an ongoing global ransomware attack using VMware ESXi servers vulnerable to CVE-2021-21974. This vulnerability is caused by a heap overflow issue in the OpenSLP service that can be exploited by an unauthenticated threat actor. The attack primarily seems to be taking place through the OpenSLP port, which is TCP or UDP port 427. 
 
 
 ## What you can do
