Casefile update mailrun 1

--- a/_cases/2023/DIVD-2023-00007.md
+++ b/_cases/2023/DIVD-2023-00007.md
@@ -32,6 +32,9 @@ timeline:
 - start: 2023-02-04
   end:
   event: "DIVD starts scanning for first targetlist."
+- start: 2023-02-06
+  end:
+  event: "DIVD sends out first round of notifications."
 ---
 
 ## Summary
@@ -56,3 +59,4 @@ DIVD is currently gathering data and scanning to identify systems (potentially) 
 * [Bleeping Computer blog](https://www.bleepingcomputer.com/news/security/massive-esxiargs-ransomware-attack-targets-vmware-esxi-servers-worldwide/)
 * [OVHcloud blog](https://blog.ovhcloud.com/ransomware-targeting-vmware-esxi/)
 * [VMware Build Numbers for ESXi](https://kb.vmware.com/s/article/2143832)
+* [Known Indicators of Compromise](https://github.com/fastfire/IoC_Attack_ESXi_Feb_2023)
