--- a/_cases/2023/DIVD-2023-00006.md
+++ b/_cases/2023/DIVD-2023-00006.md
@@ -26,7 +26,7 @@ timeline:
 
 ## Summary
 
-A vulnerability has been found in QNAP devices running QTS 5.0.1 and QuTS hero h5.0.1. When exploited, it is possible for attackers to inject malicious code. QNAP has linked CWE-89 to this CVE. The CWE is related to 'Improper Neutralization of Special Elements used in an SQL Command (or SQL injection)'. QTS 5.0.0, QTS 4.x.x, QuTS hero 5.0.0 and QuTS hero 4.5.x are not affected.
+A vulnerability has been found in QNAP devices running QTS 5.0.1 and QuTS hero h5.0.1. When exploited, it is possible for attackers to inject malicious code. QNAP has linked {% cwe CWE-89 %} to this CVE. The CWE is related to 'Improper Neutralization of Special Elements used in an SQL Command (or SQL injection)'. QTS 5.0.0, QTS 4.x.x, QuTS hero 5.0.0 and QuTS hero 4.5.x are not affected.
 
 ## What you can do
 
