--- a/_cases/2023/DIVD-2023-00006.md
+++ b/_cases/2023/DIVD-2023-00006.md
@@ -35,6 +35,7 @@ Update your QTS or QuTS hero. This can be done by navigating to Control Panel > 
 ## What we are doing
 
 DIVD is currently working to identify vulnerable parties and notifying these. We do this by finding QNAP QTS and QNAP QuTS Hero instances and verifying their version and build number.
+The notificaiton will be sent to the party responsible for the ip address accoording to the whois database. 
 
 {% include timeline.html %}
 
