--- a/_cases/2023/DIVD-2023-00006.md
+++ b/_cases/2023/DIVD-2023-00006.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Unauthenticated command injection in QTS and QuTS hero "
+title: "Unauthenticated command injection in QNAP QTS and QuTS hero "
 author: Stan Plasmeijer
 lead: Stan Plasmeijer
 status: Open
