--- a/_cases/2023/DIVD-2023-00006.md
+++ b/_cases/2023/DIVD-2023-00006.md
@@ -30,7 +30,7 @@ A vulnerability has been found in QNAP devices running QTS 5.0.1 and QuTS hero h
 
 ## What you can do
 
-Update your QTS or QuTS hero. This can be done by navigating to Control Panel > System > Firmware Update. Under Live Update, click Check for Update.
+Update your QTS or QuTS hero. This can be done by navigating to Control Panel > System > Firmware Update. Under Live Update, click `Check for Update`.
 
 ## What we are doing
 
