--- a/_cases/2023/DIVD-2023-00006.md
+++ b/_cases/2023/DIVD-2023-00006.md
@@ -1,10 +1,10 @@
 ---
 layout: case
-title: "Unauthenticated command injection in QNAP QTS and QuTS hero "
+title: "Unauthenticated code injection in QNAP QTS and QuTS hero"
 author: Stan Plasmeijer
 lead: Stan Plasmeijer
 status: Open
-excerpt: ""
+excerpt: "QNAP has released an advisory for devices running QTS 5.0.1 and QuTS hero h5.0.1. Those devices might be vulnerable for code injection."
 researchers:
 - Rutger Hermens
 - Hans Meuris
