--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -57,7 +57,7 @@ timeline:
   event: "DIVD performs a second scan to find remaining vulnerable parties."
 - start: 2022-02-08
   end:
-  event: "Second mail run with reminders completed.""
+  event: "Second mail run with reminders completed."
 
 ---
 
