--- a/_cases/2023/DIVD-2023-00003.md
+++ b/_cases/2023/DIVD-2023-00003.md
@@ -26,9 +26,12 @@ timeline:
 - start: 2023-01-11
   end: 
   event: "DIVD starts research on this vulnerability."
-- start: 2023-11-20
+- start: 2023-01-20
   end:
   event: "DIVD conducts first scan."
+- start: 2023-02-12
+  end:
+  event: "DIVD sends first round of notifications."
 ---
 
 ## Summary
