Toevoeging Sequalize CVE's
Toevoeging Sequalize CVE's

--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -17,7 +17,10 @@ cves:
 - CVE-2022-2422
 - CVE-2022-29822
 - CVE-2022-29823
-product: "Feathers.js"
+- CVE-2023-22578
+- CVE-2023-22579
+- CVE-2023-22580
+product: "Feathers.js & Sequalize.js"
 versions: "6.x < 6.3.4"
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 patch_status: Available
@@ -59,3 +62,6 @@ We recommend to use the latest version of Feathers.js
 * {% cve CVE-2022-2422 %}
 * {% cve CVE-2022-29822 %}
 * {% cve CVE-2022-29823 %}
+* {% cve CVE-2023-22578 %}
+* {% cve CVE-2023-22579 %}
+* {% cve CVE-2023-22580 %}
