--- a/_cases/2023/DIVD-2023-00008.md
+++ b/_cases/2023/DIVD-2023-00008.md
@@ -28,7 +28,7 @@ timeline:
 ---
 
 ## Summary
-A vulnerability in the web-based management interface of Cisco Small Business RV340, RV340W, RV345 and RV345P could allow an authenticated. remote attacker to execute arbitrary code. The attacker does need valid administrator credentials. 
+A vulnerability in the web-based management interface of Cisco Small Business RV340, RV340W, RV345 and RV345P could allow an authenticated, remote attacker to execute arbitrary code. The attacker does need valid administrator credentials. 
 
 ## What you can do
 
