--- a/_cases/2023/DIVD-2023-00011.md
+++ b/_cases/2023/DIVD-2023-00011.md
@@ -34,7 +34,7 @@ timeline:
   event: "DIVD starts researching these vulnerabilities."
 - start: 2023-02-21
   end: 
-  event: "First version of this casefile.
+  event: "First version of this casefile."
 ---
 
 ## Summary
