--- a/_cases/2022/DIVD-2022-00029.md
+++ b/_cases/2022/DIVD-2022-00029.md
@@ -33,7 +33,11 @@ timeline:
 - start: 2022-09-27
   end:
   event: Another round of notifications sent to the affected parties
+- start: 2023-02-22
+  end:
+  event: After monitoring the decrease in vulnerable systems we've decided to close this case.
 
+ips: 9934
 ---
 
 ## Summary
