change status to closed

--- a/_cases/2022/DIVD-2022-00029.md
+++ b/_cases/2022/DIVD-2022-00029.md
@@ -5,7 +5,7 @@ divd: DIVD-2022-00029
 excerpt: "An authentication bypass vulnerability in the User Portal and Webadmin allows a remote attacker to execute code in Sophos Firewall version v18.5 MR3 and older."
 author: Victor Pasman
 lead: Pepijn van der Stap
-status: Open
+status: Closed
 researchers:
 - Pepijn van der Stap
 - Victor Pasman
