add closing date to closed case

--- a/_cases/2022/DIVD-2022-00029.md
+++ b/_cases/2022/DIVD-2022-00029.md
@@ -16,7 +16,7 @@ recommendation: "If you received a notification of a vulnerability, patch your s
 patch_status: Available
 -workaround:
 start: 2022-05-10
-end:
+end: 2023-02-22
 timeline:
 - start: 2022-05-10
   end:
