--- a/_cases/2022/DIVD-2022-00053.md
+++ b/_cases/2022/DIVD-2022-00053.md
@@ -3,7 +3,7 @@ layout: case
 title: Atlassian Bitbucket Server - CVE-2022-36804
 author: Pepijn van der Stap
 lead: Ralph Horn
-status: Open
+status: Closed
 excerpt: DIVD is researching Bitbucket instances that are vulnerable to CVE-2022-36804.
 researchers:
 - Kaj Koole
@@ -16,7 +16,7 @@ versions: "7.0.0, 7.0.1, 7.2.0, 7.0.2, 7.1.1, 7.0.3, 7.1.2, 7.0.4, 7.1.3, 7.2.1,
 recommendation: "Update to 7.6.17, 7.17.10, 7.21.4, 8.0.3, 8.1.3, 8.2.2, 8.3.1 or higher."
 workaround: set feature.public.access to false in the bitbucket.properties configuration file.
 start: 2022-09-21
-end:
+end: 2023-02-22
 timeline:
 - start: 2022-08-24
   end:
@@ -33,7 +33,10 @@ timeline:
 - start: 2022-11-11
   end:
   event: "DIVD starts third round of notifications."
-
+- start: 2023-02-22
+  end: 
+  event: After monitoring the decrease in vulnerable systems we've decided to close this case.
+ips: 118
 ---
 
 ## Summary
