--- a/_cases/2023/DIVD-2023-00012.md
+++ b/_cases/2023/DIVD-2023-00012.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Unauthenticated Remote Command Execution using SAML in Zoho ManageEngine"
+title: "Unauthenticated Remote Command Execution in IBM Aspera Faspex"
 author: Axel Boesenach
 lead: Axel Boesenach
 status: Open
