--- a/_cases/2023/DIVD-2023-00012.md
+++ b/_cases/2023/DIVD-2023-00012.md
@@ -23,8 +23,9 @@ timeline:
   - start: 2023-02-21
     end:
     event: "DIVD starts researching fingerprint."
-  - start: 2023-02-21
+  - start: 2023-02-23
     end:
+    event: "DIVD identifies vulnerable parties."
 ---
 
 ## Summary
