Update Zoho ManageEngine 2023-00004

--- a/_cases/2023/DIVD-2023-00004.md
+++ b/_cases/2023/DIVD-2023-00004.md
@@ -54,6 +54,9 @@ timeline:
 - start: 2023-02-14
   end:
   event: "DIVD conducts second scan and prepares second notification round."
+- start: 2023-02-25
+  end:
+  event: "DIVD sends second round of notifications."
 ---
 
 ## Summary
