--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -56,6 +56,7 @@ file"
 - start: 2023-02-22
   end:
   event: "DIVD sent out a second round of notifications."
+ips: 0
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
