--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -47,7 +47,7 @@ timeline:
   event: "First data shared between Fox-IT and DIVD"
 - start: 2023-01-18
   end:
-  event: "First version of this case ips: 0 
+  event: "First version of this case file”
 file"
 - start: 2023-01-18
   end:
