--- a/_cases/2023/DIVD-2023-00011.md
+++ b/_cases/2023/DIVD-2023-00011.md
@@ -2,12 +2,14 @@
 layout: case
 title: "FortiNAC and FortiWeb RCE Vulnerability"
 author: Max van der Horst
-lead: Max van der Horst
+lead: Victor Pasman
 status: Open
 excerpt: "Fortinet has released security updates for its FortiNAC and FortiWeb products to fix two critical vulnerabilities."
 researchers:
 - Stan Plasmeijer
 - Axel Boesenach
+- Victor Pasman
+- Ralph Horn
 - Max van der Horst
 cves:
 - CVE-2022-39952
