--- a/_cases/2023/DIVD-2023-00011.md
+++ b/_cases/2023/DIVD-2023-00011.md
@@ -45,7 +45,7 @@ Fortinet has released security updates for both FortiNAC and FortiWeb, addressin
 
 ## What you can do
 
-Upgrade your FortiNAC and/or FortiWeb instances to one of the mentioned patched versions as soon as possible.
+Upgrade your FortiNAC and/or FortiWeb instances to one of the mentioned patched versions as soon as possible. This means for FortiNAC that you should upgrade to 9.4.1 and later, 9.2.6 and later, 9.1.8 and later and 7.2.0 and later. For FortiWeb, upgrade to 7.0 or later, 6.3.17 or later, 6.2.7 or later, 6.1.3 or later and 6.0.8 or later.
 
 ## What we are doing
 
