--- a/_cases/2023/DIVD-2023-00012.md
+++ b/_cases/2023/DIVD-2023-00012.md
@@ -26,6 +26,9 @@ timeline:
   - start: 2023-02-23
     end:
     event: "DIVD identifies vulnerable parties."
+  -start: 2023-03-01
+    end:
+    event: "DIVD sends first round of notifications."
 ---
 
 ## Summary
