--- a/_cases/2022/DIVD-2022-00060.md
+++ b/_cases/2022/DIVD-2022-00060.md
@@ -40,6 +40,9 @@ timeline:
 - start: 2023-01-20
   end:
   event: "DIVD sends a second round of notifications."
+- start: 2023-03-07
+  end:
+  event: "DIVD sends a third and final round of notifications."
 
 ---
 
