--- a/_cases/2022/DIVD-2022-00038.md
+++ b/_cases/2022/DIVD-2022-00038.md
@@ -14,7 +14,7 @@ versions: "12.1.3.0.0, 12.2.1.3.0, 12.2.1.4.0 and 14.1.1.0.0"
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 patch_status: Available
 start: 2022-07-03
-end: 
+end: 2023-03-07
 timeline:
 - start: 2022-07-03
   end:
@@ -30,7 +30,7 @@ timeline:
   event: Second round of notifications sent to about 165 hosts
 - start: 2022-10-05
   end:
-  event: Second round of notifications sent to about 230 hosts
+  event: Third round of notifications sent to about 230 hosts
 ips: 295
 ---
 ## Summary
