--- a/_cases/2023/DIVD-2023-00003.md
+++ b/_cases/2023/DIVD-2023-00003.md
@@ -3,7 +3,7 @@ layout: case
 title: "OS command injection in CentOS CWP"
 author: Max van der Horst
 lead: Max van der Horst
-status: Open
+status: Closed
 excerpt: "The login/index.php endpoint in CentOS Control Web Panel 7 before 0.9.8.1147 allows unauthenticated attackers to execute OS commands."
 researchers:
 - Rutger Hermens
@@ -32,6 +32,9 @@ timeline:
 - start: 2023-02-12
   end:
   event: "DIVD sends first round of notifications."
+- start: 2023-02-22
+  end:
+  event: "DIVD closes case."
 ---
 
 ## Summary
