--- a/_cases/2023/DIVD-2023-00003.md
+++ b/_cases/2023/DIVD-2023-00003.md
@@ -18,7 +18,7 @@ versions:
 - All versions prior to 0.9.8.1147
 recommendation: "Upgrade to the latest version of CentOS CWP."
 start: 2023-01-11
-end:
+end: 2023-02-22
 timeline:
 - start: 2023-01-06
   end:
@@ -35,6 +35,7 @@ timeline:
 - start: 2023-02-22
   end:
   event: "DIVD closes case."
+ips: 33
 ---
 
 ## Summary
