--- a/_cases/2023/DIVD-2023-00010.md
+++ b/_cases/2023/DIVD-2023-00010.md
@@ -1,7 +1,7 @@
 ---
 layout: case
-title: Remote Code Execution in Microsoft Exchange
-excerpt: 
+title: Remote Code Execution in Microsoft Exchange Server
+excerpt: Remote Code Execution vulnerability was found and fixed in Microsoft Exchange Server, the DIVD is scanning for vulnerable systems and notifying owners of vulnerable systems
 author: Célistine Oosting
 lead: Célistine Oosting
 researchers:
