--- a/_cases/2022/DIVD-2022-00024.md
+++ b/_cases/2022/DIVD-2022-00024.md
@@ -24,7 +24,7 @@ recommendation: "If you receive an email from DIVD referring to this case, the v
 patch_status: Available
 -workaround: 
 start: 2022-03-31
-end:
+end: 2022-09-22
 timeline:
 - start: 2022-03-31
   end:
