--- a/_cases/2022/DIVD-2022-00038.md
+++ b/_cases/2022/DIVD-2022-00038.md
@@ -5,7 +5,7 @@ divd: DIVD-2022-00038
 excerpt: "Patch vulnerable Oracle WebLogic servers immediately as some versions are vulnerable for an Local File Inclusion Attack, which causes secrets and sourcecode to be readable by malicious attackers. DIVD is actively notifying owners of vulnerable systems"
 author: Tom Wolters
 lead: Victor Pasman
-status: Open
+status: Closed
 researchers:
 - Tom Wolters
 cves: CVE-2022-21371
