--- a/_cases/2023/DIVD-2023-00014.md
+++ b/_cases/2023/DIVD-2023-00014.md
@@ -38,7 +38,7 @@ timeline:
 
 ## Summary
 
-Certain Jira Service Management Server and Data Center versions have a vulnerability that allows an attacker to impersonate another user and gain access under certain circumstances. Especially vulnerable are bot accounts, as well as instances using SSO, where anyone can create their own account.
+Several Jira Service Management versions between 5.3.0 and 5.5.0 contain a vulnerability that allows an attacker to impersonate another user and gain access under certain circumstances. Especially vulnerable are bot accounts, as well as instances using SSO, where anyone can create their own account.
 
 ## What you can do
 
