--- a/_cases/2023/DIVD-2023-00014.md
+++ b/_cases/2023/DIVD-2023-00014.md
@@ -42,7 +42,7 @@ Several Jira Service Management versions between 5.3.0 and 5.5.0 contain a vulne
 
 ## What you can do
 
-Update your Jira Service Management Server and Data Center to a fixed version to mitigate the vulnerability.
+Update your Jira Service Management Server and Data Center to one of the patched versions mentioned earlier in this case file to mitigate the vulnerability.
 
 ## What we are doing
 
