--- a/_cases/2022/DIVD-2022-00024.md
+++ b/_cases/2022/DIVD-2022-00024.md
@@ -8,7 +8,7 @@ author: Pepijn van der Stap
 lead: Victor Pasman
 redirect_from:
 - /DIVD-2022-00024/
-status : Open
+status : Closed
 researchers:
 - Max van der Horst
 - Martin van Wingerden
@@ -24,7 +24,7 @@ recommendation: "If you receive an email from DIVD referring to this case, the v
 patch_status: Available
 -workaround: 
 start: 2022-03-31
-end:
+end: 2022-09-22
 timeline:
 - start: 2022-03-31
   end:
