--- a/_cases/2023/DIVD-2023-00012.md
+++ b/_cases/2023/DIVD-2023-00012.md
@@ -11,7 +11,7 @@ cves:
   - CVE-2022-47986
 product: IBM Aspera Faspex
 versions:
-  - "IBM Aspera Faspext: < 4.4.2 Patch Level 2"
+  - "IBM Aspera Faspex: < 4.4.2 Patch Level 2"
 
 recommendation: "Update your Aspera Faspex instance to 4.4.2 Patch Level 2 to mitigate the vulnerability."
 start: 2023-02-17
@@ -29,6 +29,9 @@ timeline:
   - start: 2023-03-01
     end:
     event: "DIVD sends first round of notifications."
+  - start: 2023-03-11
+    end:
+    event: "DIVD conducts second scan and sends second round of notifications."
 ---
 
 ## Summary
