--- a/_cases/2022/DIVD-2022-00060.md
+++ b/_cases/2022/DIVD-2022-00060.md
@@ -17,7 +17,7 @@ versions: v7.0 to v7.5, v7.6.0 to v7.6.18, v7.7 to v7.16, v7.17.0 to v7.17.11, v
 recommendation: "Upgrade your affected installations to one of the fixed versions listed by Atlassian in their Security Advisory."
 workaround: "If upgrading is not an option, a temporary mitigation step is to disable the Public Signup option. This changes the attack vector from unauthenticated to authenticated."
 start: 2022-11-17
-end:
+end: 2023-03-13
 timeline:
 - start: 2022-11-17
   end:
@@ -43,7 +43,10 @@ timeline:
 - start: 2023-03-07
   end:
   event: "DIVD sends a third and final round of notifications."
-
+- start: 2023-03-13
+  end:
+  event: "Case closed."
+ips: 181
 ---
 
 ## Summary
