--- a/_cases/2022/DIVD-2022-00060.md
+++ b/_cases/2022/DIVD-2022-00060.md
@@ -3,7 +3,7 @@ layout: case
 title: Command Injection vulnerability in Bitbucket Server and Data Center
 author: Max van der Horst
 lead: Melvin Boers
-status: Open
+status: Closed
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-43781
 researchers:
 - Ralph Horn
