--- a/_cases/2023/DIVD-2023-00016.md
+++ b/_cases/2023/DIVD-2023-00016.md
@@ -13,7 +13,7 @@ cves:
 product: GLPI
 versions: < 9.5.9 & 10.0.3
 recommendation: "Update to the latest version or delete the vendor/htmlawed/htmlawed/htmLawedTest.php file (be careful not to touch the htmLawed.php file which is legitimate)."
-Start: 2022-11-10
+start: 2022-11-10
 end: -
 timeline:
 - start: 2022-12-10
