--- a/_cases/2023/DIVD-2023-00016.md
+++ b/_cases/2023/DIVD-2023-00016.md
@@ -11,7 +11,9 @@ researchers:
 cves:
 - CVE-2022-35914
 product: GLPI
-versions: < 9.5.9 & 10.0.3
+versions: 
+- “< 9.5.9”
+- “< 10.0.3”
 recommendation: "Update to the latest version or delete the vendor/htmlawed/htmlawed/htmLawedTest.php file (be careful not to touch the htmLawed.php file which is legitimate)."
 start: 2022-11-10
 end: 
