--- a/_cases/2023/DIVD-2023-00016.md
+++ b/_cases/2023/DIVD-2023-00016.md
@@ -33,7 +33,7 @@ timeline:
 
 ## Summary
 
-The case involves a code injection vulnerability in GLPI instances versions <=10.0.2 and <=9.5.8, caused by an old version of the htmlawed library (under /vendor/htmlawed/htmlawed/) that still contains the htmLawedTest.php file with code injection vulnerability.
+The case involves a code injection vulnerability in GLPI instances versions < 10.0.3 and < 9.5.9, caused by an old version of the htmlawed library (under /vendor/htmlawed/htmlawed/) that still contains the htmLawedTest.php file with code injection vulnerability.
 ## What you can do
 
 Update your instance or delete the vendor/htmlawed/htmlawed/htmLawedTest.php file (be careful not to touch the htmLawed.php file which is legitimate). Or prevent web access to the vendor/ folder by setting (in the case of Apache for example) an adequate .htaccess.
