--- a/_cases/2023/DIVD-2023-00016.md
+++ b/_cases/2023/DIVD-2023-00016.md
@@ -14,8 +14,8 @@ product: GLPI
 versions: 
 - “< 9.5.9”
 - “< 10.0.3”
-recommendation: "Update to the latest version”
-workaround: “Delete the vendor/htmlawed/htmlawed/htmLawedTest.php file (be careful not to touch the htmLawed.php file which is legitimate)."
+recommendation: "Update to the latest version"
+workaround: "Delete the vendor/htmlawed/htmlawed/htmLawedTest.php file (be careful not to touch the htmLawed.php file which is legitimate)."
 start: 2022-11-10
 end: 
 timeline:
