--- a/_cases/2023/DIVD-2023-00017.md
+++ b/_cases/2023/DIVD-2023-00017.md
@@ -9,7 +9,7 @@ researchers:
 - Max van der Horst
 cves:
 - CVE-2023-20025
-product: Cisco RV340, RV340W, RV345 and RV345P
+product: "Cisco RV016, RV042, RV042G, RV082"
 
 recommendation: "Apply the proposed workaround by restricting access to port 443 and 60443 and disabling remote management."
 start: 2023-03-15
