--- a/_cases/2023/DIVD-2023-00017.md
+++ b/_cases/2023/DIVD-2023-00017.md
@@ -27,11 +27,11 @@ timeline:
 ---
 
 ## Summary
-A vulnerability in the web-based management interface of Cisco Small Business RV042 Series Routers could allow an unauthenticated, remote attacker to bypass authentication on the affected device. This vulnerability is due to incorrect user input validation of incoming HTTP packets. An attacker could exploit this vulnerability by sending crafted requests to the web-based management interface. A successful exploit could allow the attacker to gain root privileges on the affected device.
+A vulnerability in the web-based management interface of End-of-Life Cisco Small Business RV042 Series Routers could allow an unauthenticated, remote attacker to bypass authentication on the affected device. This vulnerability is due to incorrect user input validation of incoming HTTP packets. An attacker could exploit this vulnerability by sending crafted requests to the web-based management interface. A successful exploit could allow the attacker to gain root privileges on the affected device.
 
 ## What you can do
 
-Cisco advises to disable remote management and restrict access to ports 443 and 60443. Routers will still be accessible through the LAN interface after the mitigation has been implemented. In order to implement this workaround, please follow the steps mentioned in the Cisco security advisory in the references.
+Because the vulnerable devices are End of Life, Cisco does not plan on releasing a patch for this vulnerability. Cisco advises to disable remote management and restrict access to ports 443 and 60443. Routers will still be accessible through the LAN interface after the mitigation has been implemented. In order to implement this workaround, please follow the steps mentioned in the Cisco security advisory in the references.
 
 ## What we are doing
 
