--- a/_cases/2022/DIVD-2022-00063.md
+++ b/_cases/2022/DIVD-2022-00063.md
@@ -62,6 +62,10 @@ timeline:
     event: "DIVD identifies vulnerable devices"
   - start: 2023-03-26
     event: "DIVD sends new batch of notifications"
+  - start: 2023-03-27
+    event: "DIVD is contacted about false positives by multiple parties"
+  - start: 2023-03-27
+    event: "DIVD triages the issue regarding the false positives and sends rectification e-mails"
 ---
 
 ## Summary
