Add rectification text about false positives

--- a/_cases/2022/DIVD-2022-00063.md
+++ b/_cases/2022/DIVD-2022-00063.md
@@ -76,6 +76,8 @@ DIVD has created a partial fingerprinting method and is warning those that are r
 
 Unfortunately on 16-12 notifications were sent to a too broad audience. We apologize for this mishap. In the coming days, we will rescan and sent out new notifications to the correct addresses.
 
+On 27-03 we were notified by mulitple parties that the devices they were notified of being vulnerable were already patched. After a little bit of triaging it was found out that the script to check for the versions encountered had an error and was indeed labeling certain version numbers as being vulnerable while they weren't. Another set of notifications was sent out to the parties involved to inform them of the mistake.
+
 ## What you can do
 
 If you are running FortiNet equipment running FortiOS, we advise you to upgrade your instance to one of the listed patched versions in Fortinet's [FG-IR-22-398 security bulletin](https://www.fortiguard.com/psirt/FG-IR-22-398).
