--- a/_cases/2023/DIVD-2023-00009.md
+++ b/_cases/2023/DIVD-2023-00009.md
@@ -6,6 +6,7 @@ lead: Max van der Horst
 status: Open
 excerpt: "Cisco RV340, RV340W, RV345 and RV345P contain a Remote Command Execution vulnerability. "
 researchers:
+- Lennaert Oudshoorn
 - Stan Plasmeijer
 - Alwin Warringa
 - Max van der Horst
