--- a/_cases/2023/DIVD-2023-00014.md
+++ b/_cases/2023/DIVD-2023-00014.md
@@ -20,11 +20,11 @@ versions:
   - 5.5.0
 
 recommendation: "Update your Jira Service Management Server and Data Center to a fixed version to mitigate the vulnerability."
-Fixed versions:
-  - 5.3.3
-  - 5.4.2
-  - 5.5.1
-  - 5.6.0 or later
+  - fixed versions:
+    - 5.3.3
+    - 5.4.2
+    - 5.5.1
+    - 5.6.0 or later
 start: 2023-02-01
 end:
 timeline:
@@ -32,8 +32,14 @@ timeline:
     end:
     event: "Atlassian security advisory released"
   - start: 2023-02-23
-    end:
+    end: 2023-03-15
     event: "DIVD starts researching fingerprint."
+  - start: 2023-03-16
+    end: 2023-04-01
+    event: "DIVD starts scanning the internet for vulnerable instances."
+  - start: 2023-04-05
+    end: 
+    event: "Case closed."
 ---
 
 ## Summary
@@ -46,7 +52,9 @@ Update your Jira Service Management Server and Data Center to one of the patched
 
 ## What we are doing
 
-DIVD is currently working to identify vulnerable parties and notifying these. We do this by finding Jira Service Management Server and Data Center instances and verifying their version.
+After creating a fingerprint, we started scanning the internet for possibly compromised servers.
+
+From the data we gathered, we concluded there were no vulnerable servers directly accessible from the internet.
 
 {% include timeline.html %}
 
