Closed case DIVD-2022-00042

--- a/_cases/2022/DIVD-2022-00042.md
+++ b/_cases/2022/DIVD-2022-00042.md
@@ -4,9 +4,9 @@ title: "Canon print portals facing the internet"
 author: Simon Kort
 lead: Lenneart Oudshoorn
 excerpt: "Easily accessible Canon print portals facing towards the internet can lead to full access to the administration interface of the printer."
-status: Open
+status: Closed
 start: 2022-08-18
-end: 
+end: 2023-04-05
 researchers:
 - Simon Kort
 cves: 
@@ -22,8 +22,12 @@ timeline:
 - start: 2022-11-11
   end:
   event: Owners of vulnerable systems are informed
+- start: 2023-04-05
+  end: 2023-04-05
+  event: Case closed
+ips: 445
 ---
-    
+
 ## Summary
 Canon network printers come with a print portal. In this portal you can see the status of your printer, upload files to print and generally manage the printer. These portals are effectively websites that can also face towards the internet. A malicious user could abuse the print portal and take control of your printer. There are three vulnerabilities in the print portal. If you have recieved a notification about this case then your print portal is vulnerable to one of more of them.
 
