--- a/_cases/2023/DIVD-2023-00012.md
+++ b/_cases/2023/DIVD-2023-00012.md
@@ -32,6 +32,9 @@ timeline:
   - start: 2023-03-11
     end:
     event: "DIVD conducts second scan and sends second round of notifications."
+  - start: 2023-04-05
+    end:
+    event: "DIVD conducts third scan and sends third round of notifications."
 ---
 
 ## Summary
