Update casefile summary

--- a/_cases/2022/DIVD-2022-00058.md
+++ b/_cases/2022/DIVD-2022-00058.md
@@ -51,9 +51,9 @@ timeline:
 
 ## Summary
 
-On may 2022 a [security patch](https://www.zkoss.org/product/zk/releasenote/9.6.2) was released for the file upload vulnerability that was found by Markus Wulftange. At the time of this release there was no public exploitation script available to abuse the vulnerability. In October of 2022 Huntress released a [blogpost](https://www.huntress.com/blog/critical-vulnerability-disclosure-connectwise/r1soft-server-backup-manager-remote-code-execution-supply-chain-risks) going into the ConnectWise product exploitation.
+In may 2022 a file upload vulnerability was found by Markus Wulftange in the ZK AuUploader servlets for which a [security patch](https://www.zkoss.org/product/zk/releasenote/9.6.2) was released by ZK. At the time of this release there was no public exploitation script available to abuse the vulnerability. It wasn't until the October 2022 [blogpost](https://www.huntress.com/blog/critical-vulnerability-disclosure-connectwise/r1soft-server-backup-manager-remote-code-execution-supply-chain-risks) of Huntress that demonstrated the exploitation of the R1Soft Server Backup Manager which uses the ZK framework. At the time of the Huntress blogpost there were no indications of this vulnerability being exploited in the wild until March of 2023 when Fox-IT encountered [active exploitation](https://blog.fox-it.com/2023/02/22/from-backup-to-backdoor-exploitation-of-cve-2022-36537-in-r1soft-server-backup-manager/) of this software during an incident response engagement.
 
-Due to the nature of this exploit it's hard to accurately inform vulnerable parties as the vulnerability could be present inside of another software product that is merely being used by the party involded.
+Because ZK is a framework which can be incorporated in other software applications we can identify whether a service is vulnerable, but we're unable to identify the exact part that is vulnerable within this software application.
 
 ## What you can do
 
