--- a/_cases/2022/DIVD-2022-00058.md
+++ b/_cases/2022/DIVD-2022-00058.md
@@ -47,6 +47,9 @@ timeline:
   - start: 2023-03-27
     end:
     event: "DIVD identifies vulnerable parties"
+  - start: 2023-05-10
+    end:
+    event: "DIVD notifies vulnerable parties"
 ---
 
 ## Summary
