--- a/_cases/2023/DIVD-2023-00014.md
+++ b/_cases/2023/DIVD-2023-00014.md
@@ -3,13 +3,14 @@ layout: case
 title: "Critical Broken Authentication Flaw in Jira Service Management Products"
 author: Rutger Hermens
 lead: Rutger Hermens
-status: Open
+status: Closed
 excerpt: "Vulnerable Jira Service Management Server and Data Center versions allow an attacker to impersonate another user and gain access under certain circumstances."
 researchers:
   - Victor Gevers
   - Rutger Hermens
 cves:
   - CVE-2023-22501
+ips: 0
 product: Jira Service Management Server and Data Center
 versions:
   - 5.3.0
@@ -19,14 +20,9 @@ versions:
   - 5.4.1
   - 5.5.0
 
-recommendation: "Update your Jira Service Management Server and Data Center to a fixed version to mitigate the vulnerability."
-  - fixed versions:
-    - 5.3.3
-    - 5.4.2
-    - 5.5.1
-    - 5.6.0 or later
+recommendation: "Update your Jira Service Management Server and Data Center to a fixed version (5.3.3, 5.4.2, 5.5.1, 5.6.0, or later) to mitigate the vulnerability."
 start: 2023-02-01
-end:
+end: 2023-04-05
 timeline:
   - start: 2023-02-01
     end:
