Changed ips to n/a

--- a/_cases/2023/DIVD-2023-00014.md
+++ b/_cases/2023/DIVD-2023-00014.md
@@ -10,7 +10,7 @@ researchers:
   - Rutger Hermens
 cves:
   - CVE-2023-22501
-ips: 0
+ips: n/a
 product: Jira Service Management Server and Data Center
 versions:
   - 5.3.0
