--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -3,7 +3,7 @@ layout: case
 title: ProxyNotShell - Microsoft Exchange SSRF and RCE
 author: Max van der Horst
 lead: Max van der Horst
-status: Open
+status: Closed
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-41040 and CVE-2022-41082 (nicknamed ProxyNotShell).
 researchers:
 - Ralph Horn
@@ -17,7 +17,7 @@ versions: Exchange Server 2013, 2016 and 2019.
 recommendation: "As long as there is no patch available, it is recommended to apply one of the mitigations suggested by Microsoft. Please find the Security Advisory at the end of the casefile."
 workaround: Either apply a URL Rewrite Rule as suggested by the mitigations in the Security Advisory or disable remote PowerShell access for non-administrators.
 start: 2022-09-30
-end:
+end: 2023-04-10
 timeline:
 - start: 2022-09-30
   end:
@@ -58,6 +58,13 @@ timeline:
 - start: 2022-02-08
   end:
   event: "Second mail run with reminders completed."
+- start: 2023-04-10
+  end:
+  event: "Last control scan has been conducted."
+- start: 2023-04-10
+  end:
+  event: "Case closed."
+ips: 27201
 
 ---
 
