--- a/_cases/2023/DIVD-2023-00004.md
+++ b/_cases/2023/DIVD-2023-00004.md
@@ -3,7 +3,7 @@ layout: case
 title: "Unauthenticated Remote Command Execution using SAML in Zoho ManageEngine"
 author: Max van der Horst
 lead: Max van der Horst
-status: Open
+status: Closed
 excerpt: "Use of outdated Apache Santuario library in Zoho ManageEngine causes an unauthenticated RCE vulnerability by sending a malicious SAML response."
 researchers:
 - Célistine Oosting
@@ -40,7 +40,7 @@ versions:
 
 recommendation: "Update your ManageEngine instance to the next version. The patched version is the next version number for all vulnerable versions (e.g. 4307 > 4308)."
 start: 2023-01-20
-end:
+end: 2023-04-17
 timeline:
 - start: 2023-01-20
   end:
@@ -57,6 +57,7 @@ timeline:
 - start: 2023-02-25
   end:
   event: "DIVD sends second round of notifications."
+ips: 137
 ---
 
 ## Summary
