--- a/_cases/2023/DIVD-2023-00004.md
+++ b/_cases/2023/DIVD-2023-00004.md
@@ -57,6 +57,12 @@ timeline:
 - start: 2023-02-25
   end:
   event: "DIVD sends second round of notifications."
+- start: 2023-04-16
+  end:
+  event: "DIVD conducts final scan."
+- start: 2023-04-17
+  end:
+  event: "Case closed."
 ips: 137
 ---
 
