--- a/_cases/2023/DIVD-2023-00009.md
+++ b/_cases/2023/DIVD-2023-00009.md
@@ -28,6 +28,9 @@ timeline:
 - start: 2023-03-25
   end:
   event: "DIVD conducts a first scan for this vulnerability."
+- start: 2023-04-18
+  end:
+  event: "DIVD sends out first round of notifications."
 ---
 
 ## Summary
@@ -45,5 +48,5 @@ DIVD is currently scanning for Small Business routers of the mentioned types tha
 
 ## More information
 
-* {% cve CVE-2023-20007 %}
+* {% cve CVE-2022-20705 %}
 * [Cisco Advisory](https://sec.cloudapps.cisco.com/security/center/content/CiscoSecurityAdvisory/cisco-sa-sb-rv-rcedos-7HjP74jD)
