--- a/_cases/2023/DIVD-2023-00007.md
+++ b/_cases/2023/DIVD-2023-00007.md
@@ -3,7 +3,7 @@ layout: case
 title: "Global VMware ESXi Ransomware Attack"
 author: Max van der Horst
 lead: Ralph Horn
-status: Open
+status: Closed
 excerpt: "Criminals are attacking VMware ESXi servers vulnerable to CVE-2021-21974 worldwide to deploy ransomware."
 researchers:
 - Julian Roseboom
@@ -21,7 +21,7 @@ versions:
 
 recommendation: "Upgrade your ESXi server to the fixed versions ESXi70U1c-17325551 (7.0), ESXi670-202102401-SG (6.7) or ESXi650-202102101-SG (6.5)."
 start: 2023-02-03
-end:
+end: 2023-04-18
 timeline:
 - start: 2023-02-03
   end:
@@ -35,6 +35,13 @@ timeline:
 - start: 2023-02-06
   end:
   event: "DIVD sends out first round of notifications."
+- start: 2023-03-07
+  end:
+  event: "Spreading of malware seems to be over, DIVD monitors the situation."
+- start: 2023-04-18
+  end:
+  event: "Case closed."
+ips: 14988
 ---
 
 ## Summary
