--- a/_cases/2023/DIVD-2023-00012.md
+++ b/_cases/2023/DIVD-2023-00012.md
@@ -15,7 +15,7 @@ versions:
 
 recommendation: "Update your Aspera Faspex instance to 4.4.2 Patch Level 2 to mitigate the vulnerability."
 start: 2023-02-17
-end:
+end: 2023-04-20
 timeline:
   - start: 2023-02-17
     end:
@@ -35,6 +35,10 @@ timeline:
   - start: 2023-04-05
     end:
     event: "DIVD conducts third scan and sends third round of notifications."
+  - start: 2023-04-20
+    end:
+    event: "Case closed."
+ips: 70
 ---
 
 ## Summary
