--- a/_cases/2023/DIVD-2023-00012.md
+++ b/_cases/2023/DIVD-2023-00012.md
@@ -3,7 +3,7 @@ layout: case
 title: "Unauthenticated Remote Command Execution in IBM Aspera Faspex"
 author: Axel Boesenach
 lead: Axel Boesenach
-status: Open
+status: Closed
 excerpt: "IBM Aspera Faspex 4.4.1 could allow a remote attacker to execute arbitrary code on the system, caused by a YAML deserialization flaw. By sending a specially crafted obsolete API call, an attacker could exploit this vulnerability to execute arbitrary code on the system."
 researchers:
   - Axel Boesenach
