--- a/_cases/2023/DIVD-2023-00020.md
+++ b/_cases/2023/DIVD-2023-00020.md
@@ -6,6 +6,7 @@ lead: Ralph Horn
 status: Open
 excerpt: "This vulnerability allows remote attackers to bypass authentication on affected installations of PaperCut MF/NG 22.0.5 (Build 63914)."
 researchers:
+- Ralph Horn
 - Max van der Horst
 cves:
 - CVE-2023-27350
