--- a/_cases/2023/DIVD-2023-00004.md
+++ b/_cases/2023/DIVD-2023-00004.md
@@ -59,7 +59,7 @@ timeline:
   event: "DIVD sends second round of notifications."
 - start: 2023-04-16
   end:
-  event: "DIVD conducts final scan."
+  event: "DIVD conducted final scan."
 - start: 2023-04-17
   end:
   event: "Case closed."
