--- a/_cases/2023/DIVD-2023-00020.md
+++ b/_cases/2023/DIVD-2023-00020.md
@@ -26,14 +26,14 @@ timeline:
 ---
 
 ## Summary
-PaperCut NG/MF installations of version 22.05 (Build 63914) contain an authentication bypass vulnerability that allow remote attackers to log into the system without authentication. An attacker can leverage this vulnerability to execute arbitrary code in the context of SYSTEM on the underlying Operating System. There is evidence that this vulnerability is actively being exploited by criminals.
+PaperCut NG/MF installations of version 22.05 (Build 63914) contain an authentication bypass vulnerability that allow remote attackers to log into the system without authentication. An attacker can leverage this vulnerability to execute arbitrary code in the context of SYSTEM on the underlying Operating System. There is evidence that this vulnerability is actively being exploited in the wild.
 
 ## What you can do
 Upgrade your PaperCut NG/MF version to versions 20.1.7, 21.2.11, 22.0.9 or higher to fix this vulnerability. Find steps to upgrade in [PaperCuts advisory](https://www.papercut.com/kb/Main/PO-1216-and-PO-1219#faqs). Because this vulnerability is likely being actively exploited, upgrading is highly advised.
 
 ## What we are doing
 
-DIVD is currently scanning for vulnerable PaperCut systems connected to the public Internet. Owners of vulnerable systems receive a notification with instructions to update their system. 
+DIVD is currently scanning for vulnerable PaperCut systems connected to the Internet. Owners of vulnerable systems receive a notification with instructions to update their system. 
 
 {% include timeline.html %}
 
