--- a/_cases/2023/DIVD-2023-00020.md
+++ b/_cases/2023/DIVD-2023-00020.md
@@ -22,6 +22,9 @@ timeline:
 - start: 2023-04-21
   end:
   event: "DIVD conducts first scan."
+- start:
+  end:
+  event: "DIVD performs first mailrun."
 ---
 
 ## Summary
