--- a/_cases/2023/DIVD-2023-00020.md
+++ b/_cases/2023/DIVD-2023-00020.md
@@ -23,7 +23,7 @@ timeline:
 - start: 2023-04-21
   end:
   event: "DIVD conducts first scan."
-- start:
+- start: 20230424
   end:
   event: "DIVD performs first mailrun."
 ---
