--- a/_cases/2023/DIVD-2023-00009.md
+++ b/_cases/2023/DIVD-2023-00009.md
@@ -32,6 +32,9 @@ timeline:
 - start: 2023-04-18
   end:
   event: "DIVD sends out first round of notifications."
+- start: 2023-05-02
+  end:
+  event: "DIVD conducts a second scan for this vulnerability"
 ---
 
 ## Summary
