--- a/_cases/2022/DIVD-2022-00058.md
+++ b/_cases/2022/DIVD-2022-00058.md
@@ -47,7 +47,13 @@ timeline:
   - start: 2023-03-27
     end:
     event: "DIVD identifies vulnerable parties"
-  - start: 2023-05-10
+  - start: 2023-04-10
+    end:
+    event: "DIVD notifies vulnerable parties"
+  - start: 2023-05-07
+    end:
+    event: "DIVD conducts new scan"
+  - start: 2023-05-07
     end:
     event: "DIVD notifies vulnerable parties"
 ---
