--- a/_cases/2023/DIVD-2023-00021.md
+++ b/_cases/2023/DIVD-2023-00021.md
@@ -1,10 +1,10 @@
 ---
 layout: case
-title: "Multiple vulnerabilities in Danfoss Products"
+title: "Multiple vulnerabilities in Danfoss EM100"
 author: Max van der Horst
 lead: Max van der Horst
 status: Open
-excerpt: "Danfoss EM100 has multiple web-related vulnerabilities. It is advised to phase out the EM100, as this product is End of Life."
+excerpt: "Danfoss EM100 has multiple web-related vulnerabilities. It is advised to phase out this product, as this product is End of Life."
 researchers:
 - Jony Schats (Hackdefense)
 - Stan Plasmeijer
@@ -26,12 +26,15 @@ timeline:
 - start: 2023-01-18
   end:
   event: "Researchers from Hackdefense reach out to DIVD, DIVD starts investigation"
+- start: 2023-01-18
+  end:
+  event: "Vulnerabilities reported"
+- start: 2023-01-18
+  end: 2023-02-17
+  event: "Time to acknowledge"
 - start: 2023-02-17
   end:
-  event: "Danfoss acknowledges vulnerabilities"
-- start: 2023-03-23
-  end:
-  event: "Danfoss confirms patch date of yet to be disclosed product"
+  event: "Vendor acknowledges receipt of vulnerabilities"
 - start: 2023-05-08
   end:
   event: "Limited disclosure of the EM100 vulnerabilities"
