Let's fix his name

--- a/_cases/2022/DIVD-2022-00058.md
+++ b/_cases/2022/DIVD-2022-00058.md
@@ -9,7 +9,7 @@ researchers:
   - John Hammond (Huntress)
   - Caleb Stewart (Huntress)
   - Ralph Horn
-  - Lennaert Oudshoon
+  - Lennaert Oudshoorn
   - Axel Boesenach
   - Tom Wolters
   - Victor Pasman
