Casefile update papercut

--- a/_cases/2023/DIVD-2023-00020.md
+++ b/_cases/2023/DIVD-2023-00020.md
@@ -6,6 +6,7 @@ lead: Ralph Horn
 status: Open
 excerpt: "This vulnerability allows remote attackers to bypass authentication on affected installations of PaperCut MF/NG 22.0.5 (Build 63914)."
 researchers:
+- Axel Boesenach
 - Ralph Horn
 - Max van der Horst
 cves:
@@ -26,6 +27,13 @@ timeline:
 - start: 2023-04-24
   end:
   event: "DIVD performs first mailrun."
+- start: 2023-04-26
+  end:
+  event: "Lockbit, Clop and Iranian APTs confirmed by Microsoft to exploit in wild."
+- start: 2023-05-04
+  end:
+  event: "Bypass for patch found by VulnCheck, DIVD starts investigation on new fingerprint."
+
 ---
 
 ## Summary
@@ -46,3 +54,5 @@ DIVD is currently scanning for vulnerable PaperCut systems connected to the Inte
 * {% cve CVE-2023-27351 %}
 * [PaperCut Advisory](https://www.papercut.com/kb/Main/PO-1216-and-PO-1219)
 * [Huntress Analysis](https://www.huntress.com/blog/critical-vulnerabilities-in-papercut-print-management-software)
+* [BleepingComputer on Threat Actors](https://www.bleepingcomputer.com/news/security/microsoft-clop-and-lockbit-ransomware-behind-papercut-server-hacks/)
+* [VulnCheck Patch Bypass](https://vulncheck.com/blog/papercut-rce)
