--- a/_cases/2022/DIVD-2022-00068.md
+++ b/_cases/2022/DIVD-2022-00068.md
@@ -6,7 +6,7 @@ lead: Victor Pasman
 status: Open
 excerpt: "Multiple vulnerabilities have been identified in White Rabbit Switch from CERN. Leveraging these vulnerabilities could allow an attacker to compromise the system." 
 researchers:
-- Tom Wolter (finder from Chapter 8)
+- Tom Wolters (finder from Chapter8)
 - Victor Pasman
 - Frank Breedijk
 - Max van der Horst
@@ -29,6 +29,15 @@ timeline:
 - start: 2023-04-11
   end:
   event: "CERN released White Rabbit Switch 6.0.2, which contains a fix for CVE-2023-22577 and CVE-2023-22581."
+- start: 2022-11-16
+  end: 2022-12-09
+  event: "Time to acknowledge"
+- start: 2022-12-09
+  end:
+  event: "Vendor acknowledges receipt of vulnerabilities"
+- start: 2023-04-11
+  end:
+  event: "Limited disclosure of the White Rabbit Switch vulnerabilities"
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
