Update, case closed

--- a/_cases/2023/DIVD-2023-00017.md
+++ b/_cases/2023/DIVD-2023-00017.md
@@ -24,6 +24,16 @@ timeline:
 - start: 2023-03-16
   end:
   event: "DIVD performs first mailrun."
+- start: 2023-04-04
+  end:
+  event: "DIVD performs second mailrun."
+- start: 2023-04-19
+  end:
+  event: "DIVD performs third mailrun."
+- start: 2023-05-15
+  end:
+  event: "Case closed."
+ips: 3125
 ---
 
 ## Summary
