Closing case DIVD-2023-00001

--- a/_cases/2023/DIVD-2023-00001.md
+++ b/_cases/2023/DIVD-2023-00001.md
@@ -25,9 +25,9 @@ versions:
 recommendation: Update your system to the latest patched version
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2023-01-18
-end: 
+end: 2023-05-24
 timeline:
 - start: 2022-11-08
   end:
@@ -55,7 +55,13 @@ file"
 - start: 2023-02-22
   end:
   event: "DIVD sent out a second round of notifications."
-ips: 0
+- start: 2023-05-24
+  end:
+  event: "DIVD sent out a third and final round of notifications."
+- start: 2023-05-24
+  end:
+  event: "Case closed."
+ips: 11903
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
@@ -91,7 +97,11 @@ If you are not using one of these servers we still recommend that you patch to a
 
 ## What we are doing
 
-Fox-IT is sharing lists with vulnerable systems on a regular basis, and DIVD is sending out notifications to owners of vulnerable systems.
+Fox-IT has shared lists with vulnerable systems on a regular basis, and DIVD has sent out notifications to owners of vulnerable systems.
+
+We did this over a timespam of three months.
+
+We stopped notifying system owners after this time.
 
 {% comment %}  Leave this here, so we see a timeline {% endcomment %}
 {% include timeline.html %}
