--- a/_cases/2023/DIVD-2023-00010.md
+++ b/_cases/2023/DIVD-2023-00010.md
@@ -42,6 +42,12 @@ timeline:
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
+
+### Important Information
+
+During the parsing of data related to this case something went wrong and some emails have been erroneously sent out for systems that are not vulnerable to these vulnerabilities, should you have received an email stating your systems are vulnerable to this vulnerability, yet your systems are updated to at least the February 2023 Cumulative Update (Buildnrs. listed above), you can safely disregard this email. 
+
+
 ## Summary
 
 On the 14th of February Microsoft released an update that patched 4 CVE's in Microsoft Exchange Server that can lead to remote code execution on vulnerable systems.
