--- a/_cases/2022/DIVD-2022-00065.md
+++ b/_cases/2022/DIVD-2022-00065.md
@@ -3,7 +3,7 @@ layout: case
 title: Multiple Critical Vulnerabilities in multiple Zyxel EOL devices
 excerpt: "Based on disclosure by Sec Consult, DIVD performed scans of end of life device impacted by multiple vulnerabilities."
 author: Rutger Hermens
-lead: Mick Beer
+lead: Rutger Hermens
 researchers:
 - Mick Beer
 - Pepijn van der Stap
@@ -48,10 +48,16 @@ timeline:
 - start: 2022-12-19
   end: 2023-01-23
   event: "DIVD starts exploring the possibility of EOL devices still being operated, and how to best determine vulnerabilities"
-- start: 2023-01-24
+- start: 2023-01-20
+  end: 2023-01-24
+  event: "DIVD scans and notifies owners/operators of EOL devices"
+- start: 2023-02-24
+  end: 2023-03-03
+  event: "DIVD rescans and notifies owners/operators of EOL devices that are still found to be operational"
+- start: 2023-05-25
   end:
-  event: "DIVD scans and notifies owners/operators of EOL devices"  
-#ips: 1
+  event: "DIVD rescans and notifies owners/operators of EOL devices that are still found to be operational"
+#ips: 500
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
@@ -68,6 +74,8 @@ If you came here through other means than through our direct mailing, please ref
 ## What we are doing
 
 After having notified all owners/operators of relevant EOL Zyxel devices, we will intermittently scan the internet, to determine if appropriate action has been taken, and renotify if we have not received a reply from a devices respective owner/operator.
+
+At the first scan, we found 500 vulnerable IP addresses. A month later, a second scan showed 413 vulnerable IPs.
 
 ## More information
 
