--- a/_cases/2023/DIVD-2023-00021.md
+++ b/_cases/2023/DIVD-2023-00021.md
@@ -1,13 +1,13 @@
 ---
 layout: case
-title: "Multiple vulnerabilities in Danfoss EM100"
+title: "Multiple vulnerabilities in Danfoss AK-EM 100"
 author: Max van der Horst
 lead: Max van der Horst
 status: Open
-excerpt: "Danfoss EM100 has multiple web-related vulnerabilities. It is advised to phase out this product, as this product is End of Life."
+excerpt: "Danfoss AK-EM 100 has multiple web-related vulnerabilities. It is advised to phase out this product, as this product is End of Life."
 researchers:
-- Jony Schats (Hackdefense)
-- Stan Plasmeijer
+- Jony Schats (HackDefense)
+- Stan Plasmeijer (HackDefense)
 - Max van der Horst
 cves:
 - CVE-2023-22583
@@ -17,9 +17,9 @@ cves:
 - CVE-2023-25911
 - CVE-2023-25912
 
-product: "Danfoss EM100"
+product: "Danfoss AK-EM 100"
 
-recommendation: "It is recommended by Danfoss to phase out the EM100"
+recommendation: "It is recommended by Danfoss to phase out the AK-EM 100"
 start: 2023-01-18
 end:
 timeline:
@@ -37,18 +37,18 @@ timeline:
   event: "Vendor acknowledges receipt of vulnerabilities"
 - start: 2023-05-08
   end:
-  event: "Limited disclosure of the EM100 vulnerabilities"
+  event: "Limited disclosure of the AK-EM 100 vulnerabilities"
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
 ---
 
 ## Summary
-Multiple injection-related vulnerabilities exist in a set of Danfoss products, among which the EM100. These vulnerabilities should be considered serious and could lead to the full compromise of your system. It is advised to phase out the EM100, as its vendor Danfoss confirms the EM100 to be End of Life and that it will not be releasing a patch for this product.
+Multiple injection-related vulnerabilities exist in a set of Danfoss products, among which the AK-EM 100. These vulnerabilities should be considered serious and could lead to the full compromise of your system. It is advised to phase out the AK-EM 100, as its vendor Danfoss confirms the AK-EM 100 to be End of Life and that it will not be releasing a patch for this product.
 
 ## What you can do
 
-For the EM100, it is advised to phase out this product. If this is not possible, ensure it is not connected to the public Internet.
+For the AK-EM 100, it is advised to phase out this product. If this is not possible, ensure it is not connected to the public Internet.
 
 ## What we are doing
 
@@ -63,4 +63,5 @@ After completing the CVE registration, DIVD will start scanning for vulnerable i
 * {% cve CVE-2023-22585 %}
 * {% cve CVE-2023-22586 %}
 * {% cve CVE-2023-25911 %}
-* {% cve CVE-2023-25912 %}
+* {% cve CVE-2023-25912 %} 
+* 
