updated case file DIVD-2022-00005

--- a/_cases/2022/DIVD-2022-00005.md
+++ b/_cases/2022/DIVD-2022-00005.md
@@ -7,7 +7,7 @@ author: Ruben Uithol
 lead: Ruben Uithol
 redirect_from:
 - /DIVD-2022-00005/
-status : Open
+status : Closed
 researchers:
 - Artur Miron
 - Patrick Hulshof
@@ -31,6 +31,12 @@ timeline:
 - start: 2022-02-08
   end:
   event:  DIVD starts first round of notifications.
+- start: 2022-02-23
+  end:
+  event: Notified governement SOCs.
+- start: 2022-04-20
+  end:
+  event: DIVD starts second round of notifications.
 ips: 12571
 ---
 ## Summary
