Added missing end date to case file

--- a/_cases/2022/DIVD-2022-00005.md
+++ b/_cases/2022/DIVD-2022-00005.md
@@ -17,7 +17,7 @@ product: BACnet
 versions: any
 recommendation: "Restrict access to public BACnet ports or implement BACnet/SC (Secure Connect)."
 start: 2022-01-29
-end:
+end: 2022-04-20
 timeline:
 - start: 2021-12-22
   end:
