--- a/_cases/2023/DIVD-2023-00021.md
+++ b/_cases/2023/DIVD-2023-00021.md
@@ -38,6 +38,9 @@ timeline:
 - start: 2023-05-08
   end:
   event: "Limited disclosure of the AK-EM 100 vulnerabilities"
+  - start: 2023-05-11
+  end:
+  event: "DIVD starts scanning the internet for vulnerable instances."
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
@@ -64,3 +67,4 @@ After completing the CVE registration, DIVD will start scanning for vulnerable i
 * {% cve CVE-2023-22586 %}
 * {% cve CVE-2023-25911 %}
 * {% cve CVE-2023-25912 %} 
+* [Blog post by HackDefense on the findings in the AK-EM 100](https://hackdefense.com/publications/vulnerabilities-in-controller-of-refrigeration-equipment/)
